welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: type mismatch;
 found   : java.awt.Color
 required: String
    if (isFacingTrail(c) == true)
                      ^