welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     while(!estSurBiscuit())
  {
    if (isFacingTrail(c) == true)
    {
    avance()
    }
  }
 }

def isFacingTrail(couleurSol : String):Boolean = {
  if (estFaceMur() == true)
  {
    return false
  }
  avance()
  var couleur = getCouleurSol()
  recule()
    if (couleur == couleurSol)
  {
    return true
  }
  else
  {
    return false
  }
}
 // here comes your isFacingTrail method